feat: add user expenses listing
